[gd_scene load_steps=14 format=3 uid="uid://bmbmyrd5qbr8d"]

[ext_resource type="Texture2D" uid="uid://dyuaamnmdeos1" path="res://assets/characters/enemies/blue-yankee.png" id="1_p07km"]
[ext_resource type="Script" path="res://game/enemies/boss.gd" id="1_ylx0d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oebwn"]
atlas = ExtResource("1_p07km")
region = Rect2(0, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_agkov"]
atlas = ExtResource("1_p07km")
region = Rect2(16, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8d6x"]
atlas = ExtResource("1_p07km")
region = Rect2(32, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e2ra"]
atlas = ExtResource("1_p07km")
region = Rect2(48, 48, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_rcwmy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oebwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agkov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8d6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e2ra")
}],
"loop": true,
"name": &"WALK",
"speed": 15.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tg34x"]
size = Vector2(19, 16)

[sub_resource type="Animation" id="Animation_cxe20"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gsyx1"]
resource_name = "new_animation"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8l8q2"]
_data = {
"RESET": SubResource("Animation_cxe20"),
"new_animation": SubResource("Animation_gsyx1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpbs2"]
size = Vector2(14, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2ehp"]
size = Vector2(16, 0.833334)

[node name="Boss" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_ylx0d")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rcwmy")
animation = &"WALK"
autoplay = "WALK"
frame_progress = 0.720814
flip_h = true

[node name="RayCastGround" type="RayCast2D" parent="Sprite"]
position = Vector2(-5, 0)
target_position = Vector2(0, 18.24)

[node name="RayCastWall" type="RayCast2D" parent="Sprite"]
position = Vector2(-5, 3.33333)
rotation = 1.5708
target_position = Vector2(0, 18.24)

[node name="FarCast" type="RayCast2D" parent="Sprite"]
position = Vector2(0, 5)
rotation = 1.5708
target_position = Vector2(0, 100)

[node name="HitBox" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/HitBox"]
position = Vector2(-10.5, 3)
shape = SubResource("RectangleShape2D_tg34x")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite/HitBox"]
autoplay = "new_animation"
libraries = {
"": SubResource("AnimationLibrary_8l8q2")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_hpbs2")

[node name="HurtArea" type="Area2D" parent="." groups=["enemy_hurt_box"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2(0, -7.32)
shape = SubResource("RectangleShape2D_i2ehp")
debug_color = Color(0.929412, 0.0627451, 0.635294, 0.419608)

[connection signal="body_entered" from="Sprite/HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="area_entered" from="HurtArea" to="." method="_on_hurt_area_area_entered"]
